[package]
name = "nftmart-traits"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { default-features = false, path = "../../primitives/std" }
sp-core = { version = "3.0.0", default-features = false, path = "../../primitives/core" }
frame-support = { default-features = false, path = "../../frame/support" }
enumflags2 = { version = "0.6.3" }
orml-traits = { default-features = false, path = "../orml-traits" }

[features]
default = ['std']
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	'sp-std/std',
    'frame-support/std',
	"enumflags2/serde",
	"orml-traits/std",
]

