[package]
name = "nftmart-rpc-runtime-api"
version = "2.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "3.0.0", default-features = false, path = "../../../../primitives/api" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"codec/std",
]
